--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark" style="min-width: 630px;">
+<html lang="en" id="html" data-bs-theme="dark" style="min-width: 630px;">
   <head>
     <meta charset="utf-8" />
     <!-- Bootstrap CSS -->
